--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.sunday.weatherapplication.ui.city_fragment.CityFragment"
+        android:name="com.sunday.weatherapplication.ui.cities.CityFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_city">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.sunday.weatherapplication.ui.forecast_fragment.ForecastFragment"
+        android:name="com.sunday.weatherapplication.ui.forecast.ForecastFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_forecast">
 
