--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:id="@+id/current_layout"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
@@ -179,6 +180,20 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/error"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:text="@string/error_generic"
+            android:lineSpacingExtra="@dimen/grid2"
+            android:textSize="@dimen/title_size"
+            android:layout_width="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
 
 
