--- a/app/src/main/res/layout/city_item_layout.xml
+++ b/app/src/main/res/layout/city_item_layout.xml
@@ -42,6 +42,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/grid2" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/arrow_right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_right"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="@dimen/grid3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/grid3" />
+
     <View
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/country"
